--- a/footballpeek.com/manifest.json
+++ b/footballpeek.com/manifest.json
@@ -7,12 +7,12 @@
    "background_color": "#074c72",
    "icons": [
       {
-         "src": "/icon-192x192.png",
+         "src": "/footballpeek/footballpeek.com/icon-192x192.png",
          "sizes": "192x192",
          "type": "image/png"
       },
       {
-         "src": "/icon-512x512.png",
+         "src": "/footballpeek/footballpeek.com/icon-512x512.png",
          "sizes": "512x512",
          "type": "image/png"
       }
