--- a/footballpeek.com/manifest.json
+++ b/footballpeek.com/manifest.json
@@ -1,7 +1,7 @@
 {
    "short_name": "Foot Peek",
    "name": "Football Peek",
-   "start_url": "footballpeek.com",
+   "start_url": "",
    "display": "standalone",
    "theme_color": "#074c72",
    "background_color": "#074c72",
